--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
+# Only safetensors is needed for metadata reading
+# torch and numpy are NOT required - we parse the file header directly using Python's stdlib (json + struct)
 safetensors
-torch
-numpy
